src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_detect_fill")]
        internal static extern int Features2DSimpleBlobDetectFill(IntPtr detector, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_get_params")]
        internal static extern int Features2DSimpleBlobGetParams(IntPtr detector, out NativeSimpleBlobParams parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_set_params")]
        internal static extern int Features2DSimpleBlobSetParams(IntPtr detector, ref NativeSimpleBlobParams parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_get_blob_contours_count")]
        internal static extern int Features2DSimpleBlobGetBlobContoursCount(IntPtr detector, out int contourCount, out int totalPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_get_blob_contours_fill")]
        internal static extern int Features2DSimpleBlobGetBlobContoursFill(IntPtr detector, int* offsets, int offsetCapacity, NativePoint* points, int pointCapacity, out int contourCount, out int totalPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_default_name_length")]
        internal static extern int Features2DOrbDefaultNameLength(IntPtr orb, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_default_name_fill")]
        internal static extern int Features2DOrbDefaultNameFill(IntPtr orb, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_default_name_length")]
        internal static extern int Features2DSiftDefaultNameLength(IntPtr sift, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_default_name_fill")]
        internal static extern int Features2DSiftDefaultNameFill(IntPtr sift, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_default_name_length")]
        internal static extern int Features2DFastDefaultNameLength(IntPtr fast, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_default_name_fill")]
        internal static extern int Features2DFastDefaultNameFill(IntPtr fast, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_default_name_length")]
        internal static extern int Features2DGfttDefaultNameLength(IntPtr gftt, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_default_name_fill")]
        internal static extern int Features2DGfttDefaultNameFill(IntPtr gftt, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_default_name_length")]
        internal static extern int Features2DMserDefaultNameLength(IntPtr mser, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_default_name_fill")]
        internal static extern int Features2DMserDefaultNameFill(IntPtr mser, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_default_name_length")]
        internal static extern int Features2DSimpleBlobDefaultNameLength(IntPtr detector, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_default_name_fill")]
        internal static extern int Features2DSimpleBlobDefaultNameFill(IntPtr detector, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_orb")]
        internal static extern int Features2DAffineCreateFromOrb(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_sift")]
        internal static extern int Features2DAffineCreateFromSift(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_fast")]
        internal static extern int Features2DAffineCreateFromFast(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_gftt")]
        internal static extern int Features2DAffineCreateFromGftt(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_mser")]
        internal static extern int Features2DAffineCreateFromMser(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_simple_blob")]
        internal static extern int Features2DAffineCreateFromSimpleBlob(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_release")]
        internal static extern void Features2DAffineRelease(IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_clear")]
        internal static extern int Features2DAffineClear(IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_empty")]
        internal static extern int Features2DAffineEmpty(IntPtr affine, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_descriptor_size")]
        internal static extern int Features2DAffineDescriptorSize(IntPtr affine, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_descriptor_type")]
        internal static extern int Features2DAffineDescriptorType(IntPtr affine, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_default_norm")]
        internal static extern int Features2DAffineDefaultNorm(IntPtr affine, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_default_name_length")]
        internal static extern int Features2DAffineDefaultNameLength(IntPtr affine, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_default_name_fill")]
        internal static extern int Features2DAffineDefaultNameFill(IntPtr affine, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_detect_count")]
        internal static extern int Features2DAffineDetectCount(IntPtr affine, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_detect_fill")]
        internal static extern int Features2DAffineDetectFill(IntPtr affine, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_set_view_params")]
        internal static extern int Features2DAffineSetViewParams(IntPtr affine, float* tilts, int tiltCount, float* rolls, int rollCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_get_view_params_count")]
        internal static extern int Features2DAffineGetViewParamsCount(IntPtr affine, out int tiltCount, out int rollCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_get_view_params_fill")]
        internal static extern int Features2DAffineGetViewParamsFill(IntPtr affine, float* tilts, int tiltCapacity, float* rolls, int rollCapacity, out int tiltCount, out int rollCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_create")]
        internal static extern int Features2DFlannMatcherCreate(out IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_release")]
        internal static extern void Features2DFlannMatcherRelease(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_clone")]
        internal static extern int Features2DFlannMatcherClone(IntPtr matcher, int emptyTrainData, out IntPtr clone);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_is_mask_supported")]
        internal static extern int Features2DFlannMatcherIsMaskSupported(IntPtr matcher, out int supported);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_empty")]
        internal static extern int Features2DFlannMatcherEmpty(IntPtr matcher, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_clear")]
        internal static extern int Features2DFlannMatcherClear(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_train")]
        internal static extern int Features2DFlannMatcherTrain(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_add")]
        internal static extern int Features2DFlannMatcherAdd(IntPtr matcher, IntPtr* descriptors, int descriptorCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_get_train_descriptors_count")]
        internal static extern int Features2DFlannMatcherGetTrainDescriptorsCount(IntPtr matcher, out int descriptorCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_get_train_descriptor_clone")]
        internal static extern int Features2DFlannMatcherGetTrainDescriptorClone(IntPtr matcher, int index, out IntPtr descriptor);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_match_count")]
        internal static extern int Features2DFlannMatcherMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_match_fill")]
        internal static extern int Features2DFlannMatcherMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, NativeDMatch* matches, int matchCapacity, out int matchCount);
